Bug 1506524: Handle LambdaArrow in MFunctionEnvironment::foldsTo. r=nbp